...
                            <constraint firstAttribute="trailing" secondItem="Qkx-S1-UBe" secondAttribute="trailing" id="TpD-gO-hNU"/>
                            <constraint firstItem="9VD-xP-uqd" firstAttribute="top" secondItem="Qkx-S1-UBe" secondAttribute="bottom" id="fLI-uD-vA8"/>
                            <constraint firstItem="Qkx-S1-UBe" firstAttribute="leading" secondItem="kGp-S3-xei" secondAttribute="leading" id="fhE-pC-wB0"/>
                            <constraint firstItem="9VD-xP-uqd" firstAttribute="top" secondItem="Qkx-S1-UBe" secondAttribute="bottom" id="n8v-cj-SgV"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="🐮 New Player 🐮" id="CIi-dn-9SE">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="LtY-Qe-ogP">
                            <connections>
                                <action selector="onSaveClick:" destination="jGF-j7-foT" id="QYg-ad-Whe"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0MC-SU-MbO">
                                        <rect key="frame" x="117" y="272" width="180" height="36"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" label="selectPlayersAL"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="180" id="PxG-or-Fc6"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Select Players">
                                            <color key="titleColor" red="1" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
...
                            <outlet property="dataSource" destination="8DE-Dm-0JU" id="jQE-17-vIp"/>
                            <outlet property="delegate" destination="8DE-Dm-0JU" id="pem-6m-CZ7"/>
                            <outlet property="emptyDataSetDelegate" destination="8DE-Dm-0JU" id="R9S-WA-SYw"/>
                            <outlet property="emptyDataSetSource" destination="8DE-Dm-0JU" id="9NW-rv-YJ7"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="🐮 Players 🐮" id="A0B-Zh-qjj">
                        <rightBarButtonItems>
                            <barButtonItem tag="88" systemItem="add" id="OYI-IL-NNv">
                                <connections>
                                    <segue destination="jGF-j7-foT" kind="show" identifier="new_player_segue" id="xOb-Cn-Cf3"/>
                                </connections>
                            </barButtonItem>
...
