...
    var selectedPlayers: [Player] = []
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.tableView.allowsMultipleSelection = true
        self.tableView.tableFooterView = UIView()
        self.navigationItem.rightBarButtonItems?.first?.accessibilityLabel = "createPlayerAL"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        do {
            selectedPlayers = []
            players = try dataManager.retrievePlayerList()
...
